--- a/portfolio/src/components/Projects/style.module.css
+++ b/portfolio/src/components/Projects/style.module.css
@@ -4,16 +4,17 @@
     justify-content: center;
     position: relative;
     overflow-x: hidden;
+    /* padding: 0 20vh; */
 }
 
 .projectsBody {
-    max-width: 1000px;
+    max-width: 1100px;
     width: 100%;
-    padding: 0 1rem;
+    padding: 0 2rem;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
 }
 
 .projectsBody:hover > :not(:hover){
@@ -23,5 +24,9 @@
 @media screen and (max-width: 767px) {
     .projectsBody:hover > :not(:hover){
         opacity: 1;
+    }
+
+    .projectsBody {
+        padding: 0 1rem;
     }
 }
